// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds corejs to transform-runtime 1`] = `
Object {
  "plugins": Array [
    Array [
      "@babel/plugin-transform-runtime",
      Object {
        "corejs": 2,
      },
    ],
  ],
}
`;

exports[`adds flow preset if hasFlow option passed 1`] = `
Object {
  "presets": Array [
    "@babel/preset-react",
    "@babel/preset-flow",
  ],
}
`;

exports[`adds legacy option to decorators 1`] = `
Object {
  "plugins": Array [
    Array [
      "@babel/plugin-proposal-decorators",
      Object {
        "legacy": true,
      },
    ],
    Array [
      "@babel/plugin-syntax-decorators",
      Object {
        "legacy": true,
      },
    ],
  ],
}
`;

exports[`adds proposal option to pipeline 1`] = `
Object {
  "plugins": Array [
    Array [
      "@babel/plugin-proposal-pipeline-operator",
      Object {
        "proposal": "minimal",
      },
    ],
    Array [
      "@babel/plugin-syntax-pipeline-operator",
      Object {
        "proposal": "minimal",
      },
    ],
  ],
}
`;

exports[`convert comma separated presets/plugins into an array 1`] = `
Object {
  "env": Object {
    "development": Object {
      "plugins": Array [
        "babel-plugin-istanbul",
        "@babel/plugin-transform-react-jsx-source",
        "@babel/plugin-transform-react-inline-elements",
      ],
    },
  },
  "plugins": Array [
    "@babel/plugin-proposal-function-bind",
    "@babel/plugin-proposal-class-properties",
  ],
  "presets": Array [
    "@babel/preset-env",
    "@babel/preset-react",
  ],
}
`;

exports[`does not add flow preset if hasFlow option is not passed 1`] = `
Object {
  "presets": Array [
    "@babel/preset-react",
  ],
}
`;

exports[`does not another flow preset if already present and hasFlow option passed 1`] = `
Object {
  "presets": Array [
    "@babel/preset-react",
    "@babel/preset-flow",
  ],
}
`;

exports[`handles @babel prefix in plugins 1`] = `
Object {
  "plugins": Array [
    "@babel/plugin-proposal-async-generator-functions",
    "@babel/plugin-proposal-class-properties",
    "@babel/plugin-proposal-do-expressions",
  ],
}
`;

exports[`package that is removed 1`] = `
Object {
  "plugins": Array [
    "@babel/plugin-proposal-function-bind",
    "@babel/plugin-transform-spread",
    "instanbul",
  ],
}
`;

exports[`packages (json5) 1`] = `
Object {
  "env": Object {
    "development": Object {
      "plugins": Array [
        "babel-plugin-istanbul",
        "@babel/plugin-transform-react-jsx-source",
        "@babel/plugin-transform-react-jsx-self",
      ],
    },
    "production": Object {
      "plugins": Array [
        "@babel/plugin-transform-react-constant-elements",
        "@babel/plugin-transform-react-inline-elements",
      ],
    },
  },
  "plugins": Array [
    "@babel/plugin-proposal-function-bind",
    Array [
      "@babel/plugin-proposal-object-rest-spread",
      Object {
        "useBuiltIns": true,
      },
    ],
    "@babel/plugin-proposal-class-properties",
  ],
  "presets": Array [
    "@babel/preset-env",
    Array [
      "@babel/preset-env",
      Object {
        "modules": false,
      },
    ],
    "@babel/preset-react",
  ],
}
`;

exports[`packages 1`] = `
Object {
  "env": Object {
    "development": Object {
      "plugins": Array [
        "babel-plugin-istanbul",
        "@babel/plugin-transform-react-jsx-source",
        "@babel/plugin-transform-react-jsx-self",
      ],
    },
    "production": Object {
      "plugins": Array [
        "@babel/plugin-transform-react-constant-elements",
        "@babel/plugin-transform-react-inline-elements",
      ],
    },
  },
  "plugins": Array [
    "@babel/plugin-proposal-function-bind",
    Array [
      "@babel/plugin-proposal-object-rest-spread",
      Object {
        "useBuiltIns": true,
      },
    ],
    "@babel/plugin-proposal-class-properties",
  ],
  "presets": Array [
    "@babel/preset-env",
    Array [
      "@babel/preset-env",
      Object {
        "modules": false,
      },
    ],
    "@babel/preset-react",
  ],
}
`;

exports[`rename community packages 1`] = `
Object {
  "env": Object {
    "development": Object {
      "plugins": Array [
        "lodash",
      ],
    },
  },
  "plugins": Array [
    "lodash",
  ],
}
`;

exports[`replaces stage presets 1`] = `
Object {
  "plugins": Array [
    "@babel/plugin-syntax-dynamic-import",
    "@babel/plugin-syntax-import-meta",
    "@babel/plugin-proposal-class-properties",
    "@babel/plugin-proposal-json-strings",
    Array [
      "@babel/plugin-proposal-decorators",
      Object {
        "legacy": true,
      },
    ],
    "@babel/plugin-proposal-function-sent",
    "@babel/plugin-proposal-export-namespace-from",
    "@babel/plugin-proposal-numeric-separator",
    "@babel/plugin-proposal-throw-expressions",
    "@babel/plugin-proposal-export-default-from",
    "@babel/plugin-proposal-logical-assignment-operators",
    "@babel/plugin-proposal-optional-chaining",
    Array [
      "@babel/plugin-proposal-pipeline-operator",
      Object {
        "proposal": "minimal",
      },
    ],
    "@babel/plugin-proposal-nullish-coalescing-operator",
    "@babel/plugin-proposal-do-expressions",
  ],
  "presets": Array [],
}
`;
